Fix WebKit-only failures in streams/piping/abort.any.html rdar://167841090 https://bugs.webkit.org/show_bug.cgi?id=305196

Reviewed by Chris Dumez.

The readable stream built-in implementation is relying on an older version of the spec where read requests were only promises.
The spec is now using read requests which is useful for the pipeTo algorithm.

This creates a mismatch between the pipeTo algorithm and the built-in readable stream implementation.
In particular, pipeTo algorithm may know that a readable gets closed before it knows that the last read request is fulfilled.
This is due to the pipeTo read requests being called once a promise resolves, while it should be synchronous.

To work-around that issue until we rework the readable stream implementation, StreamPipeToState will keep in memory that pipeTo is shutting down due to readable being closed.
In that case, we wait for the pending read request (which is actually fulfilled) before proceeding with the finalization of pipeTo.

Covered by rebased tests.

Canonical link: https://commits.webkit.org/305455@main